# top-type-sizes

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: formatter.rs  lib.rs  main.rs  options.rs  parser.rs  reader.rs  schema.rs  transformer.rs
tests/: runner.rs
tests/samples/: alignment_enum.txt  command.txt  compiler_messages.txt  control_flow.txt  several_types.txt  timex.txt  tokio_udp.txt
tests/snapshots/: runner__alignment_enum_types.snap  runner__async_fn_types.snap  runner__command_types.snap  runner__compiler_messages_types.snap  runner__control_flow_types.snap  runner__several_types_types.snap  runner__timex_types.snap  runner__tokio_udp_types.snap
tests/snapshots/alignment_enum/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/async_fn/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/command/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/compiler_messages/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/control_flow/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/several_types/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/timex/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
tests/snapshots/tokio_udp/: output-h8.snap  output-ws-h16.snap  output-ws.snap  output.snap  types.snap
