[package]
name = "top-type-sizes"
description = "Makes -Zprint-type-size more useful"
version = "0.1.5"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
keywords = ["profiling", "print-type-size"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::profiling",
]
repository = "https://github.com/loyd/top-type-sizes"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
nom = "7.1.3"
regex = "1.7.1"
structopt = "0.3.26"

[dev-dependencies]
insta = "1.28.0"
